Fixed up grid alignments in the content

--- a/src/components/ItemDetails/ItemDetails.scss
+++ b/src/components/ItemDetails/ItemDetails.scss
@@ -10,7 +10,7 @@
 }
 
 section.image-gallery {
-  margin: 0 auto;
+  max-width:720px;
   .image-gallery-image {
     max-height: 500px;
     background-color: #000;
@@ -31,7 +31,9 @@ section.image-gallery {
 .detailed-case-component {
   padding-bottom: 32px;
   padding-top: 32px;
-
+  .row {
+    margin:0;
+  }
   .main-area {
     .case-html {
       word-wrap: break-word;
@@ -44,10 +46,15 @@ section.image-gallery {
   }
 
   .sidepanel {
-    padding: 0 30px;
+    padding: 0 15px;
     margin-top: 48px;
     position:relative;
-    
+    @include media-breakpoint-up(lg) {
+      padding:0 30px 0 15px;
+    }
+    @include media-breakpoint-up(xl) {
+      padding:0 60px 0 15px;
+    }
     .case-map {
       min-height: 100px;
       width: 100%;
@@ -266,6 +273,7 @@ section.image-gallery {
         font-weight: 600;
         margin-bottom: 48px;
         font-size:2.25rem;
+        max-width:720px;
         @include media-breakpoint-down(sm) { 
           margin-bottom: 0;
         }
@@ -327,6 +335,7 @@ section.image-gallery {
           line-height: 40px;
           margin-bottom: 12px;
           margin-top: 32px;
+          max-width:720px;
         }
 
         p, li {
